Fix: 파일 첨부 ID null 검증 정합성 개선